--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ atcoder/n
 atcoder/a.exe
 UVA/a.out.dSYM/Contents/Info.plist
 spoj/a.out.dSYM/Contents/Info.plist
+baekjoon/a.out.dSYM/Contents/Info.plist
