--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ atcoder/a.exe
 UVA/a.out.dSYM/Contents/Info.plist
 spoj/a.out.dSYM/Contents/Info.plist
 baekjoon/a.out.dSYM/Contents/Info.plist
+UVA/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
