--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ UVA/a.out.dSYM/Contents/Info.plist
 spoj/a.out.dSYM/Contents/Info.plist
 baekjoon/a.out.dSYM/Contents/Info.plist
 UVA/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
+HDU/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
