--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ spoj/a.out.dSYM/Contents/Info.plist
 baekjoon/a.out.dSYM/Contents/Info.plist
 UVA/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
 HDU/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
+spoj/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
