--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ baekjoon/a.out.dSYM/Contents/Info.plist
 UVA/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
 HDU/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
 spoj/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
+.DS_Store
