--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ UVA/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
 HDU/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
 spoj/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
 .DS_Store
+codeforces/a.out.dSYM/Contents/Info.plist
+codeforces/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
