--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ spoj/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
 .DS_Store
 codeforces/a.out.dSYM/Contents/Info.plist
 codeforces/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
+LOJ/a.out.dSYM/Contents/Info.plist
+LOJ/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
