--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ codeforces/a.out.dSYM/Contents/Info.plist
 codeforces/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
 LOJ/a.out.dSYM/Contents/Info.plist
 LOJ/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
+UVA/in1
+UVA/o
