--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ LOJ/a.out.dSYM/Contents/Info.plist
 LOJ/a.out.dSYM/Contents/Resources/Relocations/aarch64/a.out.yml
 UVA/in1
 UVA/o
+.vscode/settings.json
